--- a/admin-blog.html
+++ b/admin-blog.html
@@ -1,5 +1,169 @@
-<section>
-  <h2>ブログ一覧</h2>
-  <p>投稿済ブログの確認・編集・削除が行えます。</p>
-  <p>※ この機能の実装は今後追加予定です。</p>
-</section>
+<style>
+  .list{width:45%;border-right:1px solid #ddd;overflow:auto;padding:10px;display:flex;flex-direction:column;}
+  .filters{margin-bottom:10px;display:flex;gap:6px;flex-wrap:wrap;}
+  .filters input,.filters select{padding:4px;}
+  .form{flex:1;padding:10px;overflow:auto;}
+  table{width:100%;border-collapse:collapse;font-size:14px;}
+  th,td{border:1px solid #ddd;padding:6px;}
+  th{background:#f1f5f9;}
+  label{display:block;margin:8px 0 4px;}
+  input[type=text],textarea,select{width:100%;padding:6px;}
+  .actions{margin-top:10px;}
+  button{margin-right:6px;padding:6px 12px;}
+  .pagination{margin-top:8px;display:flex;gap:6px;}
+  .admin-blog{display:flex;overflow:hidden;height:100%;}
+</style>
+
+<div class="admin-blog">
+  <div class="list">
+    <h3>記事一覧</h3>
+    <div class="filters">
+      <input type="text" id="searchBox" placeholder="検索 (タイトル/slug)">
+      <select id="monthFilter"><option value="">すべての年月</option></select>
+      <button onclick="applyFilters()">検索</button>
+    </div>
+    <table id="articlesTable">
+      <thead><tr><th>タイトル</th><th>Slug</th><th>タグ</th><th>状態</th><th>作成日</th></tr></thead>
+      <tbody></tbody>
+    </table>
+    <div class="pagination">
+      <button onclick="prevPage()">前へ</button>
+      <span id="pageInfo"></span>
+      <button onclick="nextPage()">次へ</button>
+    </div>
+    <button onclick="newArticle()">＋ 新規作成</button>
+  </div>
+
+  <div class="form">
+    <h3>記事フォーム</h3>
+    <form id="articleForm">
+      <input type="hidden" id="articleId">
+      <label>タイトル<input type="text" id="title"></label>
+      <label>Slug<input type="text" id="slug"></label>
+      <label>説明<textarea id="description" rows="2"></textarea></label>
+      <label>本文<textarea id="content" rows="8"></textarea></label>
+      <label>サムネイルURL<input type="text" id="thumbnail"></label>
+      <label>タグ (カンマ区切り)<input type="text" id="tags"></label>
+      <label><input type="checkbox" id="published"> 公開する</label>
+      <div class="actions">
+        <button type="button" onclick="saveArticle()">保存</button>
+        <button type="button" onclick="deleteArticle()">削除</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<script type="module">
+  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+  const sb = createClient(
+    "https://htnmjsqgoapvuanrsuma.supabase.co",
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
+  );
+
+  const $ = s => document.querySelector(s);
+  const tbody = $("#articlesTable tbody");
+  let currentPage = 1;
+  const pageSize = 10;
+  let currentSearch = "";
+  let currentMonth = "";
+
+  async function loadMonths(){
+    const { data, error } = await sb.from("articles").select("created_at");
+    if(error) return;
+    const months = [...new Set(data.map(r => {
+      const d = new Date(r.created_at);
+      return d.getFullYear()+"-"+String(d.getMonth()+1).padStart(2,"0");
+    }))].sort().reverse();
+    $("#monthFilter").innerHTML = '<option value="">すべての年月</option>' + months.map(m=>`<option value="${m}">${m}</option>`).join("");
+  }
+
+  async function loadArticles(){
+    let query = sb.from("articles").select("*", { count: "exact" }).order("created_at",{ascending:false}).range((currentPage-1)*pageSize, currentPage*pageSize-1);
+    if(currentSearch){
+      query = query.or(`title.ilike.%${currentSearch}%,slug.ilike.%${currentSearch}%`);
+    }
+    if(currentMonth){
+      const [y,m] = currentMonth.split("-");
+      const start = new Date(y,m-1,1).toISOString();
+      const end = new Date(y,m,0,23,59,59).toISOString();
+      query = query.gte("created_at",start).lte("created_at",end);
+    }
+    const { data, count, error } = await query;
+    if(error){console.error(error);return;}
+    tbody.innerHTML = data.map(a => `
+      <tr onclick="editArticle('${a.id}')">
+        <td>${a.title||""}</td>
+        <td>${a.slug}</td>
+        <td>${a.tags||""}</td>
+        <td>${a.published?"公開":"非公開"}</td>
+        <td>${new Date(a.created_at).toLocaleDateString()}</td>
+      </tr>`).join("");
+    const totalPages = Math.ceil(count/pageSize);
+    $("#pageInfo").textContent = currentPage+" / "+(totalPages||1);
+  }
+
+  async function editArticle(id){
+    const { data, error } = await sb.from("articles").select("*").eq("id",id).single();
+    if(error){console.error(error);return;}
+    $("#articleId").value = data.id;
+    $("#title").value = data.title||"";
+    $("#slug").value = data.slug||"";
+    $("#description").value = data.description||"";
+    $("#content").value = data.content||"";
+    $("#thumbnail").value = data.thumbnail_url||"";
+    $("#tags").value = data.tags||"";
+    $("#published").checked = data.published;
+  }
+
+  function newArticle(){
+    $("#articleId").value="";
+    $("#articleForm").reset();
+  }
+
+  async function saveArticle(){
+    const id = $("#articleId").value;
+    const row = {
+      title: $("#title").value,
+      slug: $("#slug").value,
+      description: $("#description").value,
+      content: $("#content").value,
+      thumbnail_url: $("#thumbnail").value,
+      tags: $("#tags").value,
+      published: $("#published").checked
+    };
+    let res;
+    if(id){
+      res = await sb.from("articles").update(row).eq("id",id).select();
+    }else{
+      res = await sb.from("articles").insert(row).select();
+    }
+    if(res.error){alert("保存エラー:"+res.error.message);}else{alert("保存しました");loadArticles();loadMonths();}
+  }
+
+  async function deleteArticle(){
+    const id = $("#articleId").value;
+    if(!id){alert("記事を選択してください");return;}
+    if(!confirm("削除しますか？")) return;
+    const { error } = await sb.from("articles").delete().eq("id",id);
+    if(error){alert("削除エラー:"+error.message);}else{alert("削除しました");loadArticles();newArticle();loadMonths();}
+  }
+
+  function applyFilters(){
+    currentSearch = $("#searchBox").value.trim();
+    currentMonth = $("#monthFilter").value;
+    currentPage = 1;
+    loadArticles();
+  }
+  function prevPage(){ if(currentPage>1){ currentPage--; loadArticles(); } }
+  function nextPage(){ currentPage++; loadArticles(); }
+
+  loadArticles();
+  loadMonths();
+  window.editArticle = editArticle;
+  window.newArticle = newArticle;
+  window.saveArticle = saveArticle;
+  window.deleteArticle = deleteArticle;
+  window.applyFilters = applyFilters;
+  window.prevPage = prevPage;
+  window.nextPage = nextPage;
+</script>
