--- a/admin-blog.html
+++ b/admin-blog.html
@@ -41,7 +41,7 @@
       <label>タイトル<input type="text" id="title"></label>
       <label>Slug<input type="text" id="slug"></label>
       <label>説明<textarea id="description" rows="2"></textarea></label>
-      <label>本文<textarea id="content" rows="8"></textarea></label>
+      <label>本文<textarea id="content"></textarea></label>
       <label>サムネイルURL<input type="text" id="thumbnail"></label>
       <label>タグ (カンマ区切り)<input type="text" id="tags"></label>
       <label><input type="checkbox" id="published"> 公開する</label>
@@ -52,6 +52,9 @@
     </form>
   </div>
 </div>
+
+<!-- CKEditor CDN -->
+<script src="https://cdn.ckeditor.com/ckeditor5/41.2.0/classic/ckeditor.js"></script>
 
 <script type="module">
   import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
@@ -66,6 +69,11 @@
   const pageSize = 10;
   let currentSearch = "";
   let currentMonth = "";
+  let editor;
+
+  ClassicEditor.create(document.querySelector('#content'))
+    .then(newEditor => { editor = newEditor; })
+    .catch(error => console.error(error));
 
   async function loadMonths(){
     const { data, error } = await sb.from("articles").select("created_at");
@@ -109,7 +117,7 @@
     $("#title").value = data.title||"";
     $("#slug").value = data.slug||"";
     $("#description").value = data.description||"";
-    $("#content").value = data.content||"";
+    editor.setData(data.content || "");
     $("#thumbnail").value = data.thumbnail_url||"";
     $("#tags").value = data.tags||"";
     $("#published").checked = data.published;
@@ -118,6 +126,7 @@
   function newArticle(){
     $("#articleId").value="";
     $("#articleForm").reset();
+    if(editor){ editor.setData(""); }
   }
 
   async function saveArticle(){
@@ -126,7 +135,7 @@
       title: $("#title").value,
       slug: $("#slug").value,
       description: $("#description").value,
-      content: $("#content").value,
+      content: editor ? editor.getData() : "",
       thumbnail_url: $("#thumbnail").value,
       tags: $("#tags").value,
       published: $("#published").checked
