--- a/admin-assets.html
+++ b/admin-assets.html
@@ -1,18 +1,25 @@
 <style>
   .assets-page{display:flex;gap:16px;height:100%;}
-  .assets-list{width:40%;border-right:1px solid #ddd;overflow:auto;padding:10px;}
+  .assets-list{width:45%;border-right:1px solid #ddd;overflow:auto;padding:10px;}
   .assets-preview{flex:1;padding:10px;overflow:auto;}
   table{width:100%;border-collapse:collapse;font-size:14px;}
   th,td{border:1px solid #ddd;padding:6px;}
   th{background:#f1f5f9;}
   .actions{margin-top:10px;}
   button{margin:2px;padding:6px 10px;}
-  .preview-box img{max-width:100%;height:auto;}
+  .preview-box img{max-width:100%;max-height:400px;object-fit:contain;display:block;margin:0 auto;}
+  .storage-usage{margin-bottom:10px;}
+  .progress{width:100%;height:10px;background:#eee;border-radius:5px;overflow:hidden;}
+  .progress-bar{height:100%;background:#3b82f6;}
 </style>
 
 <div class="assets-page">
   <div class="assets-list">
     <h3>ファイル一覧</h3>
+    <div class="storage-usage">
+      <div id="usageText">使用量: 計算中...</div>
+      <div class="progress"><div id="usageBar" class="progress-bar" style="width:0%"></div></div>
+    </div>
     <input type="file" id="fileInput" multiple>
     <button onclick="uploadFiles()">アップロード</button>
     <table id="assetsTable">
@@ -36,21 +43,37 @@
 
   const $ = s => document.querySelector(s);
   const tbody = $("#assetsTable tbody");
+  const MAX_STORAGE = 500 * 1024 * 1024; // 500MB 上限（契約プランに合わせて変更可）
   let currentFiles = [];
+
+  function formatSize(bytes){
+    if(!bytes) return "";
+    if(bytes < 1024) return bytes + " B";
+    if(bytes < 1024*1024) return (bytes/1024).toFixed(1) + " KB";
+    return (bytes/1024/1024).toFixed(1) + " MB";
+  }
 
   async function loadFiles(){
     const { data, error } = await sb.storage.from("assets").list("", { limit: 100 });
     if(error){ console.error(error); return; }
     currentFiles = data;
+
+    // 使用量計算
+    let totalSize = currentFiles.reduce((sum, f) => sum + (f.metadata?.size || 0), 0);
+    let percent = (totalSize / MAX_STORAGE * 100).toFixed(1);
+    $("#usageText").innerText = `使用量: ${formatSize(totalSize)} / ${formatSize(MAX_STORAGE)} (${percent}%)`;
+    $("#usageBar").style.width = percent + "%";
+
+    // 一覧描画
     tbody.innerHTML = data.map(f => {
-      const sizeKB = f.metadata?.size ? (f.metadata.size/1024).toFixed(1)+" KB" : "";
+      const size = formatSize(f.metadata?.size);
       const updated = f.updated_at ? new Date(f.updated_at).toLocaleString() : "";
       return `<tr>
         <td><a href="#" onclick="previewFile('${f.name}');return false;">${f.name}</a></td>
-        <td>${sizeKB}</td>
+        <td>${size}</td>
         <td>${updated}</td>
         <td>
-          <button onclick="copyUrl('${f.name}')">URLコピー</button>
+          <button onclick="copyUrl('${f.name}')">URL</button>
           <button onclick="deleteFile('${f.name}')">削除</button>
         </td>
       </tr>`;
@@ -71,11 +94,16 @@
   async function previewFile(name){
     const { data } = sb.storage.from("assets").getPublicUrl(name);
     const url = data.publicUrl;
-    let previewHTML = `<a href="${url}" target="_blank">${name}</a>`;
     if(name.match(/\.(jpg|jpeg|png|gif|webp)$/i)){
-      previewHTML += `<br><img src="${url}" alt="${name}">`;
+      const img = new Image();
+      img.onload = () => {
+        const sizeInfo = `<p>サイズ: ${img.naturalWidth} x ${img.naturalHeight}px</p>`;
+        $("#preview").innerHTML = `<a href="${url}" target="_blank">${name}</a><br>${sizeInfo}<img src="${url}" alt="${name}">`;
+      };
+      img.src = url;
+    } else {
+      $("#preview").innerHTML = `<a href="${url}" target="_blank">${name}</a>`;
     }
-    $("#preview").innerHTML = previewHTML;
   }
 
   async function copyUrl(name){
