--- a/admin-assets.html
+++ b/admin-assets.html
@@ -1,12 +1,13 @@
 <style>
   .assets-page{display:flex;gap:16px;height:100%;}
   .assets-list{width:45%;border-right:1px solid #ddd;overflow:auto;padding:10px;}
-  .assets-preview{flex:1;padding:10px;overflow:auto;}
+  .assets-preview{flex:1;padding:10px;overflow:auto;min-width:300px;max-width:600px;}
   table{width:100%;border-collapse:collapse;font-size:14px;}
   th,td{border:1px solid #ddd;padding:6px;}
   th{background:#f1f5f9;}
   .actions{margin-top:10px;}
   button{margin:2px;padding:6px 10px;}
+  .preview-box{border:1px solid #ddd;padding:8px;max-height:500px;overflow:auto;}
   .preview-box img{max-width:100%;max-height:400px;object-fit:contain;display:block;margin:0 auto;}
   .storage-usage{margin-bottom:10px;}
   .progress{width:100%;height:10px;background:#eee;border-radius:5px;overflow:hidden;}
@@ -43,7 +44,7 @@
 
   const $ = s => document.querySelector(s);
   const tbody = $("#assetsTable tbody");
-  const MAX_STORAGE = 500 * 1024 * 1024; // 500MB 上限（契約プランに合わせて変更可）
+  const MAX_STORAGE = 500 * 1024 * 1024; // 500MB 上限
   let currentFiles = [];
 
   function formatSize(bytes){
@@ -97,7 +98,7 @@
     if(name.match(/\.(jpg|jpeg|png|gif|webp)$/i)){
       const img = new Image();
       img.onload = () => {
-        const sizeInfo = `<p>サイズ: ${img.naturalWidth} x ${img.naturalHeight}px</p>`;
+        const sizeInfo = `<p>実サイズ: ${img.naturalWidth} x ${img.naturalHeight}px</p>`;
         $("#preview").innerHTML = `<a href="${url}" target="_blank">${name}</a><br>${sizeInfo}<img src="${url}" alt="${name}">`;
       };
       img.src = url;
