--- a/admin-assets.html
+++ b/admin-assets.html
@@ -1,11 +1,10 @@
 <style>
   .assets-page{display:flex;gap:16px;height:100%;}
   .assets-list{width:45%;border-right:1px solid #ddd;overflow:auto;padding:10px;}
-  .assets-preview{flex:1;padding:10px;overflow:auto;min-width:300px;max-width:600px;}
+  .assets-preview{width:600px;max-width:100%;padding:10px;overflow:auto;}
   table{width:100%;border-collapse:collapse;font-size:14px;}
   th,td{border:1px solid #ddd;padding:6px;}
   th{background:#f1f5f9;}
-  .actions{margin-top:10px;}
   button{margin:2px;padding:6px 10px;}
   .preview-box{border:1px solid #ddd;padding:8px;max-height:500px;overflow:auto;}
   .preview-box img{max-width:100%;max-height:400px;object-fit:contain;display:block;margin:0 auto;}
