--- a/admin-assets.html
+++ b/admin-assets.html
@@ -1,36 +1,69 @@
 <style>
-  .assets-page{display:flex;gap:16px;height:100%;}
-  .assets-list{width:45%;border-right:1px solid #ddd;overflow:auto;padding:10px;}
-  .assets-preview{width:600px;max-width:100%;padding:10px;overflow:auto;}
-  table{width:100%;border-collapse:collapse;font-size:14px;}
-  th,td{border:1px solid #ddd;padding:6px;}
-  th{background:#f1f5f9;}
+  .assets-page{padding:10px;}
+  .view-toggle{margin-bottom:10px;}
   button{margin:2px;padding:6px 10px;}
-  .preview-box{border:1px solid #ddd;padding:8px;max-height:500px;overflow:auto;}
-  .preview-box img{max-width:100%;max-height:400px;object-fit:contain;display:block;margin:0 auto;}
-  .storage-usage{margin-bottom:10px;}
+
+  /* サムネイル共通 */
+  .thumb{
+    width:100px;height:100px;
+    border:1px solid #ddd;
+    display:flex;align-items:center;justify-content:center;
+    background:#fafafa;margin:auto;
+  }
+  .thumb img{max-width:100%;max-height:100%;object-fit:contain;}
+
+  /* 一覧テーブル */
+  table{width:100%;border-collapse:collapse;font-size:14px;}
+  th,td{border:1px solid #ddd;padding:6px;vertical-align:middle;}
+  th{background:#f1f5f9;}
+
+  /* カードビュー */
+  .cards{display:grid;grid-template-columns:repeat(auto-fill,120px);gap:16px;}
+  .card{border:1px solid #ddd;padding:5px;text-align:center;position:relative;}
+  .card .thumb{margin-bottom:4px;}
+  .card .actions{display:none;position:absolute;top:2px;right:2px;}
+  .card:hover .actions{display:block;}
+  .card button{font-size:12px;padding:2px 6px;}
+
+  /* モーダル */
+  .modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);align-items:center;justify-content:center;}
+  .modal-content{background:#fff;padding:20px;max-width:80%;max-height:80%;overflow:auto;}
+  .modal-content img{max-width:100%;max-height:70vh;object-fit:contain;display:block;margin:0 auto;}
+  .close-btn{float:right;cursor:pointer;font-size:18px;}
+  .storage-usage{margin:10px 0;}
   .progress{width:100%;height:10px;background:#eee;border-radius:5px;overflow:hidden;}
   .progress-bar{height:100%;background:#3b82f6;}
 </style>
 
 <div class="assets-page">
-  <div class="assets-list">
-    <h3>ファイル一覧</h3>
-    <div class="storage-usage">
-      <div id="usageText">使用量: 計算中...</div>
-      <div class="progress"><div id="usageBar" class="progress-bar" style="width:0%"></div></div>
-    </div>
+  <h3>アセット管理</h3>
+  <div class="storage-usage">
+    <div id="usageText">使用量: 計算中...</div>
+    <div class="progress"><div id="usageBar" class="progress-bar" style="width:0%"></div></div>
+  </div>
+
+  <div class="view-toggle">
+    <button onclick="setView('list')">一覧表示</button>
+    <button onclick="setView('card')">カード表示</button>
     <input type="file" id="fileInput" multiple>
     <button onclick="uploadFiles()">アップロード</button>
-    <table id="assetsTable">
-      <thead><tr><th>名前</th><th>サイズ</th><th>更新日</th><th>操作</th></tr></thead>
-      <tbody></tbody>
+  </div>
+
+  <div id="listView">
+    <table>
+      <thead><tr><th>サムネイル</th><th>名前</th><th>サイズ</th><th>更新日</th><th>操作</th></tr></thead>
+      <tbody id="assetsTable"></tbody>
     </table>
   </div>
 
-  <div class="assets-preview">
-    <h3>プレビュー</h3>
-    <div id="preview" class="preview-box">ファイルを選択してください</div>
+  <div id="cardView" class="cards" style="display:none;"></div>
+</div>
+
+<!-- モーダル -->
+<div id="previewModal" class="modal" onclick="closeModal(event)">
+  <div class="modal-content">
+    <span class="close-btn" onclick="closeModal()">&times;</span>
+    <div id="modalBody"></div>
   </div>
 </div>
 
@@ -42,15 +75,18 @@
   );
 
   const $ = s => document.querySelector(s);
-  const tbody = $("#assetsTable tbody");
-  const MAX_STORAGE = 500 * 1024 * 1024; // 500MB 上限
+  const tbody = $("#assetsTable");
+  const cardView = $("#cardView");
+  const listView = $("#listView");
+  const MAX_STORAGE = 500 * 1024 * 1024;
   let currentFiles = [];
+  let currentView = "list";
 
   function formatSize(bytes){
     if(!bytes) return "";
     if(bytes < 1024) return bytes + " B";
-    if(bytes < 1024*1024) return (bytes/1024).toFixed(1) + " KB";
-    return (bytes/1024/1024).toFixed(1) + " MB";
+    if(bytes < 1024*1024) return (bytes/1024).toFixed(1)+" KB";
+    return (bytes/1024/1024).toFixed(1)+" MB";
   }
 
   async function loadFiles(){
@@ -58,27 +94,62 @@
     if(error){ console.error(error); return; }
     currentFiles = data;
 
-    // 使用量計算
-    let totalSize = currentFiles.reduce((sum, f) => sum + (f.metadata?.size || 0), 0);
-    let percent = (totalSize / MAX_STORAGE * 100).toFixed(1);
+    let totalSize = currentFiles.reduce((s,f)=>s+(f.metadata?.size||0),0);
+    let percent = (totalSize/MAX_STORAGE*100).toFixed(1);
     $("#usageText").innerText = `使用量: ${formatSize(totalSize)} / ${formatSize(MAX_STORAGE)} (${percent}%)`;
-    $("#usageBar").style.width = percent + "%";
+    $("#usageBar").style.width = percent+"%";
 
-    // 一覧描画
-    tbody.innerHTML = data.map(f => {
-      const size = formatSize(f.metadata?.size);
-      const updated = f.updated_at ? new Date(f.updated_at).toLocaleString() : "";
-      return `<tr>
-        <td><a href="#" onclick="previewFile('${f.name}');return false;">${f.name}</a></td>
-        <td>${size}</td>
-        <td>${updated}</td>
-        <td>
-          <button onclick="copyUrl('${f.name}')">URL</button>
-          <button onclick="deleteFile('${f.name}')">削除</button>
-        </td>
-      </tr>`;
-    }).join("");
+    render();
   }
+
+  function render(){
+    if(currentView==="list"){
+      listView.style.display="block";
+      cardView.style.display="none";
+      tbody.innerHTML = "";
+      currentFiles.forEach(f=>{
+        const { data } = sb.storage.from("assets").getPublicUrl(f.name);
+        const url = data.publicUrl;
+        const thumb = f.name.match(/\.(jpg|jpeg|png|gif|webp)$/i)
+          ? `<div class="thumb"><img src="${url}"></div>`
+          : `<div class="thumb">📄</div>`;
+        const size = formatSize(f.metadata?.size);
+        const updated = f.updated_at ? new Date(f.updated_at).toLocaleString() : "";
+        tbody.innerHTML += `<tr>
+          <td>${thumb}</td>
+          <td><a href="#" onclick="openModal('${url}','${f.name}')">${f.name}</a></td>
+          <td>${size}</td>
+          <td>${updated}</td>
+          <td>
+            <button onclick="copyUrl('${f.name}')">URL</button>
+            <button onclick="deleteFile('${f.name}')">削除</button>
+          </td>
+        </tr>`;
+      });
+    } else {
+      listView.style.display="none";
+      cardView.style.display="grid";
+      cardView.innerHTML="";
+      currentFiles.forEach(f=>{
+        const { data } = sb.storage.from("assets").getPublicUrl(f.name);
+        const url = data.publicUrl;
+        const thumb = f.name.match(/\.(jpg|jpeg|png|gif|webp)$/i)
+          ? `<div class="thumb"><img src="${url}"></div>`
+          : `<div class="thumb">📄</div>`;
+        cardView.innerHTML += `<div class="card">
+          ${thumb}
+          <div>${f.name}</div>
+          <div class="actions">
+            <button onclick="copyUrl('${f.name}')">URL</button>
+            <button onclick="deleteFile('${f.name}')">削除</button>
+          </div>
+          <a href="#" onclick="openModal('${url}','${f.name}');return false;" style="position:absolute;top:0;left:0;width:100%;height:100%;"></a>
+        </div>`;
+      });
+    }
+  }
+
+  function setView(v){ currentView=v; render(); }
 
   async function uploadFiles(){
     const files = $("#fileInput").files;
@@ -91,18 +162,23 @@
     loadFiles();
   }
 
-  async function previewFile(name){
-    const { data } = sb.storage.from("assets").getPublicUrl(name);
-    const url = data.publicUrl;
+  function openModal(url,name){
     if(name.match(/\.(jpg|jpeg|png|gif|webp)$/i)){
       const img = new Image();
-      img.onload = () => {
-        const sizeInfo = `<p>実サイズ: ${img.naturalWidth} x ${img.naturalHeight}px</p>`;
-        $("#preview").innerHTML = `<a href="${url}" target="_blank">${name}</a><br>${sizeInfo}<img src="${url}" alt="${name}">`;
+      img.onload=()=>{
+        $("#modalBody").innerHTML = `<p>${name}</p><p>実サイズ: ${img.naturalWidth} x ${img.naturalHeight}px</p><a href="${url}" target="_blank">${url}</a><br><img src="${url}">`;
       };
-      img.src = url;
+      img.src=url;
     } else {
-      $("#preview").innerHTML = `<a href="${url}" target="_blank">${name}</a>`;
+      $("#modalBody").innerHTML = `<p>${name}</p><a href="${url}" target="_blank">${url}</a>`;
+    }
+    $("#previewModal").style.display="flex";
+  }
+
+  function closeModal(e){
+    if(!e || e.target===e.currentTarget || e.target.classList.contains("close-btn")){
+      $("#previewModal").style.display="none";
+      $("#modalBody").innerHTML="";
     }
   }
 
@@ -118,12 +194,13 @@
     if(error){ alert("削除失敗:"+error.message); return; }
     alert("削除しました");
     loadFiles();
-    $("#preview").innerHTML = "ファイルを選択してください";
   }
 
   loadFiles();
-  window.uploadFiles = uploadFiles;
-  window.previewFile = previewFile;
-  window.copyUrl = copyUrl;
-  window.deleteFile = deleteFile;
+  window.setView=setView;
+  window.uploadFiles=uploadFiles;
+  window.copyUrl=copyUrl;
+  window.deleteFile=deleteFile;
+  window.openModal=openModal;
+  window.closeModal=closeModal;
 </script>
