--- a/admin-blog.html
+++ b/admin-blog.html
@@ -102,7 +102,7 @@
       <tr onclick="editArticle('${a.id}')">
         <td>${a.title||""}</td>
         <td>${a.slug}</td>
-        <td>${a.tags||""}</td>
+        <td>${(a.tags||[]).join ? a.tags.join(",") : a.tags || ""}</td>
         <td>${a.published?"公開":"非公開"}</td>
         <td>${new Date(a.created_at).toLocaleDateString()}</td>
       </tr>`).join("");
@@ -119,7 +119,7 @@
     $("#description").value = data.description||"";
     editor.setData(data.content || "");
     $("#thumbnail").value = data.thumbnail_url||"";
-    $("#tags").value = data.tags||"";
+    $("#tags").value = (data.tags || []).join(",");
     $("#published").checked = data.published;
   }
 
@@ -131,13 +131,16 @@
 
   async function saveArticle(){
     const id = $("#articleId").value;
+    const tagsValue = $("#tags").value.trim();
+    const tags = tagsValue === "" ? [] : tagsValue.split(",").map(t => t.trim()).filter(t => t);
+
     const row = {
       title: $("#title").value,
       slug: $("#slug").value,
       description: $("#description").value,
       content: editor ? editor.getData() : "",
       thumbnail_url: $("#thumbnail").value,
-      tags: $("#tags").value,
+      tags: tags,
       published: $("#published").checked
     };
     let res;
