--- a/admin-assets.html
+++ b/admin-assets.html
@@ -1,239 +1,269 @@
-<style>
-  .assets-page{padding:10px;}
-  .view-toggle{margin-bottom:10px;}
-  button{margin:2px;padding:6px 10px;}
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>アセット管理</title>
+  <style>
+    /* ルート */
+    .assets-page { padding: 10px; }
 
-  /* サムネイル共通 */
-  .thumb{
-    width:100px;height:100px;
-    border:1px solid #ddd;
-    display:flex;align-items:center;justify-content:center;
-    background:#fafafa;margin:auto;
-  }
-  .thumb img{max-width:100%;max-height:100%;object-fit:contain;}
+    /* 操作系 */
+    .assets-page .view-toggle { margin-bottom: 10px; }
+    .assets-page button { margin: 2px; padding: 6px 10px; }
 
-  /* 一覧テーブル */
-  table{width:100%;border-collapse:collapse;font-size:14px;}
-  th,td{border:1px solid #ddd;padding:6px;vertical-align:middle;}
-  th{background:#f1f5f9;}
-
-  /* カードビュー */
-  .cards{display:grid;grid-template-columns:repeat(auto-fill,120px);gap:16px;}
-  .card{border:1px solid #ddd;padding:5px;text-align:center;position:relative;}
-  .card .thumb{margin-bottom:4px;}
-  .card .actions{display:none;position:absolute;top:2px;right:2px;}
-  .card:hover .actions{display:block;}
-  .card button{font-size:12px;padding:2px 6px;}
-
-  /* モーダル */
-  .modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);align-items:center;justify-content:center;}
-  .modal-content{background:#fff;padding:20px;max-width:80%;max-height:80%;overflow:auto;}
-  .modal-content img{max-width:100%;max-height:70vh;object-fit:contain;display:block;margin:0 auto;}
-  .close-btn{float:right;cursor:pointer;font-size:18px;}
-  .storage-usage{margin:10px 0;}
-  .progress{width:100%;height:10px;background:#eee;border-radius:5px;overflow:hidden;}
-  .progress-bar{height:100%;background:#3b82f6;}
-
-  /* ドラッグ＆ドロップ */
-  .drop-zone {
-    border: 2px dashed #3b82f6;
-    padding: 20px;
-    text-align: center;
-    color: #555;
-    margin: 10px 0;
-    transition: background 0.2s;
-  }
-  .drop-zone.dragover {
-    background: #e0f2fe;
-  }
-</style>
-
-<div class="assets-page">
-  <h3>アセット管理</h3>
-  <div class="storage-usage">
-    <div id="usageText">使用量: 計算中...</div>
-    <div class="progress"><div id="usageBar" class="progress-bar" style="width:0%"></div></div>
-  </div>
-
-  <div class="view-toggle">
-    <button onclick="setView('list')">一覧表示</button>
-    <button onclick="setView('card')">カード表示</button>
-    <input type="file" id="fileInput" multiple>
-    <button onclick="uploadFiles()">アップロード</button>
-  </div>
-
-  <div id="dropZone" class="drop-zone">ここにファイルをドラッグ＆ドロップ</div>
-
-  <div id="listView">
-    <table>
-      <thead><tr><th>サムネイル</th><th>名前</th><th>サイズ</th><th>更新日</th><th>操作</th></tr></thead>
-      <tbody id="assetsTable"></tbody>
-    </table>
-  </div>
-
-  <div id="cardView" class="cards" style="display:none;"></div>
-</div>
-
-<!-- モーダル -->
-<div id="previewModal" class="modal" onclick="closeModal(event)">
-  <div class="modal-content">
-    <span class="close-btn" onclick="closeModal()">&times;</span>
-    <div id="modalBody"></div>
-  </div>
-</div>
-
-<script type="module">
-  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
-  const sb = createClient(
-    "https://htnmjsqgoapvuanrsuma.supabase.co",
-    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
-  );
-
-  const $ = s => document.querySelector(s);
-  const tbody = $("#assetsTable");
-  const cardView = $("#cardView");
-  const listView = $("#listView");
-  const dropZone = $("#dropZone");
-  const MAX_STORAGE = 500 * 1024 * 1024;
-  let currentFiles = [];
-  let currentView = "list";
-
-  function formatSize(bytes){
-    if(!bytes) return "";
-    if(bytes < 1024) return bytes + " B";
-    if(bytes < 1024*1024) return (bytes/1024).toFixed(1)+" KB";
-    return (bytes/1024/1024).toFixed(1)+" MB";
-  }
-
-  async function loadFiles(){
-    const { data, error } = await sb.storage.from("assets").list("", { limit: 100 });
-    if(error){ console.error(error); return; }
-    currentFiles = data;
-
-    let totalSize = currentFiles.reduce((s,f)=>s+(f.metadata?.size||0),0);
-    let percent = (totalSize/MAX_STORAGE*100).toFixed(1);
-    $("#usageText").innerText = `使用量: ${formatSize(totalSize)} / ${formatSize(MAX_STORAGE)} (${percent}%)`;
-    $("#usageBar").style.width = percent+"%";
-
-    render();
-  }
-
-  function render(){
-    if(currentView==="list"){
-      listView.style.display="block";
-      cardView.style.display="none";
-      tbody.innerHTML = "";
-      currentFiles.forEach(f=>{
-        const { data } = sb.storage.from("assets").getPublicUrl(f.name);
-        const url = data.publicUrl;
-        const thumb = f.name.match(/\.(jpg|jpeg|png|gif|webp)$/i)
-          ? `<div class="thumb"><img src="${url}"></div>`
-          : `<div class="thumb">📄</div>`;
-        const size = formatSize(f.metadata?.size);
-        const updated = f.updated_at ? new Date(f.updated_at).toLocaleString() : "";
-        tbody.innerHTML += `<tr>
-          <td>${thumb}</td>
-          <td><a href="#" onclick="openModal('${url}','${f.name}')">${f.name}</a></td>
-          <td>${size}</td>
-          <td>${updated}</td>
-          <td>
-            <button onclick="copyUrl('${f.name}')">URL</button>
-            <button onclick="deleteFile('${f.name}')">削除</button>
-          </td>
-        </tr>`;
-      });
-    } else {
-      listView.style.display="none";
-      cardView.style.display="grid";
-      cardView.innerHTML="";
-      currentFiles.forEach(f=>{
-        const { data } = sb.storage.from("assets").getPublicUrl(f.name);
-        const url = data.publicUrl;
-        const thumb = f.name.match(/\.(jpg|jpeg|png|gif|webp)$/i)
-          ? `<div class="thumb"><img src="${url}"></div>`
-          : `<div class="thumb">📄</div>`;
-        cardView.innerHTML += `<div class="card">
-          ${thumb}
-          <div>${f.name}</div>
-          <div class="actions">
-            <button onclick="copyUrl('${f.name}')">URL</button>
-            <button onclick="deleteFile('${f.name}')">削除</button>
-          </div>
-          <a href="#" onclick="openModal('${url}','${f.name}');return false;" style="position:absolute;top:0;left:0;width:100%;height:100%;"></a>
-        </div>`;
-      });
+    /* サムネイル共通 */
+    .assets-page .thumb {
+      width: 100px; height: 100px;
+      border: 1px solid #ddd;
+      display: flex; align-items: center; justify-content: center;
+      background: #fafafa; margin: auto;
     }
-  }
+    .assets-page .thumb img { max-width: 100%; max-height: 100%; object-fit: contain; }
 
-  function setView(v){ currentView=v; render(); }
+    /* 一覧テーブル */
+    .assets-page table { width: 100%; border-collapse: collapse; font-size: 14px; }
+    .assets-page th, .assets-page td { border: 1px solid #ddd; padding: 6px; vertical-align: middle; }
+    .assets-page th { background: #f1f5f9; }
 
-  async function uploadFiles(){
-    const files = $("#fileInput").files;
-    if(!files.length){ alert("ファイルを選択してください"); return; }
-    await handleFiles(files);
-  }
+    /* カードビュー */
+    .assets-page .cards { display: grid; grid-template-columns: repeat(auto-fill, 120px); gap: 16px; }
+    .assets-page .card { border: 1px solid #ddd; padding: 5px; text-align: center; position: relative; background: #fff; }
+    .assets-page .card .thumb { margin-bottom: 4px; }
+    .assets-page .card .actions { display: none; position: absolute; top: 2px; right: 2px; }
+    .assets-page .card:hover .actions { display: block; }
+    .assets-page .card button { font-size: 12px; padding: 2px 6px; }
 
-  async function handleFiles(files){
-    for(const file of files){
-      const { error } = await sb.storage.from("assets").upload(file.name, file, { upsert: true });
-      if(error){ alert("アップロード失敗:"+error.message); return; }
+    /* モーダル（このページ内のみで有効） */
+    .assets-page .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      align-items: center; justify-content: center;
+      z-index: 100;
     }
-    alert("アップロード完了");
+    .assets-page .modal-content {
+      background: #fff; padding: 20px;
+      max-width: 80%; max-height: 80%;
+      overflow: auto; border-radius: 6px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.25);
+    }
+    .assets-page .modal-content img { max-width: 100%; max-height: 70vh; object-fit: contain; display: block; margin: 0 auto; }
+    .assets-page .close-btn { float: right; cursor: pointer; font-size: 18px; }
+
+    /* ストレージ使用量 */
+    .assets-page .storage-usage { margin: 10px 0; }
+    .assets-page .progress { width: 100%; height: 10px; background: #eee; border-radius: 5px; overflow: hidden; }
+    .assets-page .progress-bar { height: 100%; background: #3b82f6; }
+
+    /* ドラッグ＆ドロップ */
+    .assets-page .drop-zone {
+      border: 2px dashed #3b82f6;
+      padding: 20px;
+      text-align: center;
+      color: #555;
+      margin: 10px 0;
+      transition: background 0.2s;
+      background: #fff;
+    }
+    .assets-page .drop-zone.dragover { background: #e0f2fe; }
+  </style>
+</head>
+<body>
+  <div class="assets-page">
+    <h3>アセット管理</h3>
+
+    <div class="storage-usage">
+      <div id="usageText">使用量: 計算中...</div>
+      <div class="progress"><div id="usageBar" class="progress-bar" style="width:0%"></div></div>
+    </div>
+
+    <div class="view-toggle">
+      <button onclick="assetsPage.setView('list')">一覧表示</button>
+      <button onclick="assetsPage.setView('card')">カード表示</button>
+      <input type="file" id="fileInput" multiple>
+      <button onclick="assetsPage.uploadFiles()">アップロード</button>
+    </div>
+
+    <div id="dropZone" class="drop-zone">ここにファイルをドラッグ＆ドロップ</div>
+
+    <div id="listView">
+      <table>
+        <thead><tr><th>サムネイル</th><th>名前</th><th>サイズ</th><th>更新日</th><th>操作</th></tr></thead>
+        <tbody id="assetsTable"></tbody>
+      </table>
+    </div>
+
+    <div id="cardView" class="cards" style="display:none;"></div>
+
+    <!-- モーダル（assets-page 内に配置しスコープ限定） -->
+    <div id="previewModal" class="modal" onclick="assetsPage.closeModal(event)">
+      <div class="modal-content">
+        <span class="close-btn" onclick="assetsPage.closeModal()">&times;</span>
+        <div id="modalBody"></div>
+      </div>
+    </div>
+  </div>
+
+  <script type="module">
+    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+    const sb = createClient(
+      "https://htnmjsqgoapvuanrsuma.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
+    );
+
+    const $ = (s) => document.querySelector(s);
+    const tbody    = $("#assetsTable");
+    const cardView = $("#cardView");
+    const listView = $("#listView");
+    const dropZone = $("#dropZone");
+    const MAX_STORAGE = 500 * 1024 * 1024;
+
+    let currentFiles = [];
+    let currentView  = "list";
+
+    function formatSize(bytes){
+      if(!bytes && bytes !== 0) return "";
+      if(bytes < 1024) return bytes + " B";
+      if(bytes < 1024*1024) return (bytes/1024).toFixed(1) + " KB";
+      return (bytes/1024/1024).toFixed(1) + " MB";
+    }
+
+    async function loadFiles(){
+      const { data, error } = await sb.storage.from("assets").list("", { limit: 100 });
+      if(error){ console.error(error); return; }
+      currentFiles = data || [];
+
+      const totalSize = currentFiles.reduce((s,f)=> s + (f.metadata?.size || 0), 0);
+      const percent   = ((totalSize / MAX_STORAGE) * 100).toFixed(1);
+      $("#usageText").innerText = `使用量: ${formatSize(totalSize)} / ${formatSize(MAX_STORAGE)} (${percent}%)`;
+      $("#usageBar").style.width = percent + "%";
+
+      render();
+    }
+
+    function render(){
+      if(currentView === "list"){
+        listView.style.display = "block";
+        cardView.style.display = "none";
+        tbody.innerHTML = "";
+        currentFiles.forEach(f=>{
+          const { data } = sb.storage.from("assets").getPublicUrl(f.name);
+          const url = data.publicUrl;
+          const isImg = /\.(jpg|jpeg|png|gif|webp)$/i.test(f.name);
+          const thumb = isImg
+            ? `<div class="thumb"><img src="${url}" alt=""></div>`
+            : `<div class="thumb" aria-label="file">📄</div>`;
+          const size = formatSize(f.metadata?.size);
+          const updated = f.updated_at ? new Date(f.updated_at).toLocaleString() : "";
+          tbody.insertAdjacentHTML("beforeend", `<tr>
+            <td>${thumb}</td>
+            <td><a href="#" onclick="assetsPage.openModal('${url}','${f.name}');return false;">${f.name}</a></td>
+            <td>${size}</td>
+            <td>${updated}</td>
+            <td>
+              <button onclick="assetsPage.copyUrl('${f.name}')">URL</button>
+              <button onclick="assetsPage.deleteFile('${f.name}')">削除</button>
+            </td>
+          </tr>`);
+        });
+      } else {
+        listView.style.display = "none";
+        cardView.style.display = "grid";
+        cardView.innerHTML = "";
+        currentFiles.forEach(f=>{
+          const { data } = sb.storage.from("assets").getPublicUrl(f.name);
+          const url = data.publicUrl;
+          const isImg = /\.(jpg|jpeg|png|gif|webp)$/i.test(f.name);
+          const thumb = isImg
+            ? `<div class="thumb"><img src="${url}" alt=""></div>`
+            : `<div class="thumb" aria-label="file">📄</div>`;
+          cardView.insertAdjacentHTML("beforeend", `<div class="card">
+            ${thumb}
+            <div>${f.name}</div>
+            <div class="actions">
+              <button onclick="assetsPage.copyUrl('${f.name}')">URL</button>
+              <button onclick="assetsPage.deleteFile('${f.name}')">削除</button>
+            </div>
+            <a href="#" onclick="assetsPage.openModal('${url}','${f.name}');return false;" style="position:absolute;top:0;left:0;width:100%;height:100%;"></a>
+          </div>`);
+        });
+      }
+    }
+
+    function setView(v){ currentView = v; render(); }
+
+    async function uploadFiles(){
+      const files = $("#fileInput").files;
+      if(!files || !files.length){ alert("ファイルを選択してください"); return; }
+      await handleFiles(files);
+    }
+
+    async function handleFiles(files){
+      for(const file of files){
+        const { error } = await sb.storage.from("assets").upload(file.name, file, { upsert: true });
+        if(error){ alert("アップロード失敗: " + error.message); return; }
+      }
+      alert("アップロード完了");
+      loadFiles();
+    }
+
+    function openModal(url,name){
+      if(/\.(jpg|jpeg|png|gif|webp)$/i.test(name)){
+        const img = new Image();
+        img.onload = () => {
+          $("#modalBody").innerHTML = `<p>${name}</p><p>実サイズ: ${img.naturalWidth} x ${img.naturalHeight}px</p><a href="${url}" target="_blank" rel="noopener">リンクを開く</a><br><img src="${url}" alt="">`;
+        };
+        img.src = url;
+      } else {
+        $("#modalBody").innerHTML = `<p>${name}</p><a href="${url}" target="_blank" rel="noopener">${url}</a>`;
+      }
+      $("#previewModal").style.display = "flex";
+    }
+
+    function closeModal(e){
+      if(!e || e.target === e.currentTarget || (e.target && e.target.classList && e.target.classList.contains("close-btn"))){
+        $("#previewModal").style.display = "none";
+        $("#modalBody").innerHTML = "";
+      }
+    }
+
+    async function copyUrl(name){
+      const { data } = sb.storage.from("assets").getPublicUrl(name);
+      await navigator.clipboard.writeText(data.publicUrl);
+      alert("URLをコピーしました");
+    }
+
+    async function deleteFile(name){
+      if(!confirm(name + " を削除しますか？")) return;
+      const { error } = await sb.storage.from("assets").remove([name]);
+      if(error){ alert("削除失敗: " + error.message); return; }
+      alert("削除しました");
+      loadFiles();
+    }
+
+    // D&D
+    dropZone.addEventListener("dragover", (e)=>{
+      e.preventDefault();
+      dropZone.classList.add("dragover");
+    });
+    dropZone.addEventListener("dragleave", ()=> dropZone.classList.remove("dragover"));
+    dropZone.addEventListener("drop", (e)=>{
+      e.preventDefault();
+      dropZone.classList.remove("dragover");
+      const files = e.dataTransfer.files;
+      if(files && files.length) handleFiles(files);
+    });
+
+    // 初期化
     loadFiles();
-  }
 
-  function openModal(url,name){
-    if(name.match(/\.(jpg|jpeg|png|gif|webp)$/i)){
-      const img = new Image();
-      img.onload=()=>{
-        $("#modalBody").innerHTML = `<p>${name}</p><p>実サイズ: ${img.naturalWidth} x ${img.naturalHeight}px</p><a href="${url}" target="_blank">${url}</a><br><img src="${url}">`;
-      };
-      img.src=url;
-    } else {
-      $("#modalBody").innerHTML = `<p>${name}</p><a href="${url}" target="_blank">${url}</a>`;
-    }
-    $("#previewModal").style.display="flex";
-  }
-
-  function closeModal(e){
-    if(!e || e.target===e.currentTarget || e.target.classList.contains("close-btn")){
-      $("#previewModal").style.display="none";
-      $("#modalBody").innerHTML="";
-    }
-  }
-
-  async function copyUrl(name){
-    const { data } = sb.storage.from("assets").getPublicUrl(name);
-    await navigator.clipboard.writeText(data.publicUrl);
-    alert("URLをコピーしました");
-  }
-
-  async function deleteFile(name){
-    if(!confirm(name+" を削除しますか？")) return;
-    const { error } = await sb.storage.from("assets").remove([name]);
-    if(error){ alert("削除失敗:"+error.message); return; }
-    alert("削除しました");
-    loadFiles();
-  }
-
-  // ドラッグ&ドロップ処理
-  dropZone.addEventListener("dragover", e=>{
-    e.preventDefault();
-    dropZone.classList.add("dragover");
-  });
-  dropZone.addEventListener("dragleave", ()=> dropZone.classList.remove("dragover"));
-  dropZone.addEventListener("drop", e=>{
-    e.preventDefault();
-    dropZone.classList.remove("dragover");
-    const files = e.dataTransfer.files;
-    if(files.length) handleFiles(files);
-  });
-
-  loadFiles();
-  window.setView=setView;
-  window.uploadFiles=uploadFiles;
-  window.copyUrl=copyUrl;
-  window.deleteFile=deleteFile;
-  window.openModal=openModal;
-  window.closeModal=closeModal;
-</script>
+    // グローバル汚染を避け、操作は専用名前空間からのみ実行
+    window.assetsPage = {
+      setView, uploadFiles, copyUrl, deleteFile, openModal, closeModal
+    };
+  </script>
+</body>
+</html>
